Fix uneven project card images

--- a/src/components/Projects/styles/styles.css
+++ b/src/components/Projects/styles/styles.css
@@ -156,7 +156,7 @@
 
 @media only screen and (min-width: 1500px){
   .card img {
-    width: 80%;
+    width: 300px;
     margin: 1rem;
     border-radius: 0.5rem;
   }
